# Ishmael

./: CMakeLists.txt
src/: config.xml  main.cpp
src/advection/: main.cs
src/boundary/: main.cs
src/difference/: main.cs
src/divergence/: main.cs
src/force/: main.cs
src/injectDye/: main.cs
src/jacobiIteration/: main.cs
src/main/: fragment.fs  vertex.vs
src/projection/: main.cs
src/test/: main.cs
src/texclear/: main.cs
